--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "ts-node index.ts",
+    "start": "ts-node __tests__/index.ts",
     "lint": "tslint"
   },
   "dependencies": {
@@ -13,5 +13,8 @@
     "ts-node": "^6.0.0",
     "tslint": "^5.9.1",
     "typescript": "^2.8.3"
+  },
+  "devDependencies": {
+    "@types/node": "^9.6.6"
   }
 }
