--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepublishOnly": "yarn build"
   },
   "dependencies": {
+    "@metrics-pli/types": "^1.0.0",
     "lighthouse": "^2.9.4",
     "puppeteer": "^1.3.0",
     "ts-node": "^6.0.0",
