--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@metrics-pli/types": "^1.0.0",
+    "debug": "^3.1.0",
     "lighthouse": "^2.9.4",
     "puppeteer": "^1.3.0",
     "ts-node": "^6.0.0",
