--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "prepublishOnly": "yarn build"
   },
   "dependencies": {
-    "@metrics-pli/types": "^1.0.0",
+    "@metrics-pli/types": "^1.2.1",
     "debug": "^3.1.0",
-    "lighthouse": "^2.9.4",
+    "lighthouse": "3.0.0-beta.0",
     "puppeteer": "^1.3.0",
     "ts-node": "^6.0.0",
     "tslint": "^5.9.1",
